# buildscad

./: LICENSE.txt  Makefile  README.md  pyproject.toml  run
examples/: test_viewer.py
src/buildscad/: __init__.py  __main__.py  _test.py  blocks.py  env.py  globals.py  main.py  openscad.peg  peg.py  rules.py
src/openscadq/: __init__.py  __main__.py  _test.py  blocks.py  env.py  eval.py  globals.py  main.py  openscad.peg  peg.py  rules.py  vars.py  work.py
src/scady/: __main__.py  eval.py  main.py  openscad.peg  peg.py  vars.py  work.py
tests/: env_openscad.py  test_compare.py
tests/models/: 001.py  001.scad  002.py  002.scad  003.scad  004.py  004.scad  005.scad  006.py  006.scad  007.py  007.scad  008.py  008.scad  009.py  009.scad  010.py  010.scad  011.py  012.py  012.scad  013.py  013.scad
